--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,1 +1,19 @@
+on:
+ push:
+   branches:
+     - master1
 
+
+
+
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+    -name: 'Testing github action'
+    run: pwd
+
+    -name: 'Testin printing'
+    run: echo Ahmad
