--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,8 +12,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: 'Testing github action'
+    - uses: actions/checkout@v3
     run: pwd
 
-    - name: 'Testin printing'
-    run: echo Ahmed
+    - name: 'Login to docker hub'
+    run: docker login --username ahmdes --password dckr_pat_UzhJf7T9ws_R77TPvRYEbkvOMFk
