--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,1 +1,13 @@
+on:
+    push:
+      branches:
+        - master2
+jobs:
+    build:
+      runs-on: ubuntu-latest
+      steps:
+        - name: 'Testing Github actions'
+          run: pwd
 
+        - name: 'Testing Printing'
+          run: echo Ahmed
