--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,9 +6,7 @@ jobs:
     build:
       runs-on: ubuntu-latest
       steps:
-        - name: 'Before'
-          run: ls
-
         - uses: actions/checkout@v3
-        - name: 'After'
-          run: ls
+        - name: 'Log in to docker Hub'
+          run: docker login --username ahmdes --password dckr_pat_sy1haJgBxA5n29lxHLah9mDcZVI
+
