--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,5 +8,5 @@ jobs:
       steps:
         - uses: actions/checkout@v3
         - name: 'Log in to docker Hub'
-          run: docker login --username ahmdes --password dckr_pat_XXOuut2MIa52tUrHh3nf5Q_0ppo
+          run: docker login --username ahmdes --password-stdin
 
