--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,4 +9,8 @@ jobs:
         - uses: actions/checkout@v3
         - name: 'Log in to docker Hub'
           run: docker login --username ${{ secrets.DOCKERUSERNAME}} --password ${{ secrets.DOCKERTOKEN}} 
+        - name: 'Building docker image'
+          run: docker build -t ${{ secrets.DOCKERUSERNAME}}/myimage .
+        - name: 'Building docker image'
+          run: docker push ${{ secrets.DOCKERUSERNAME}}/myimage
 
